feat: add max access endpoint
