# api/controllers/data-access/check-data-access.js
@@ -3,11 +3,25 @@ module.exports = {
 
   description: '',
 
-  inputs: {},
+  inputs: {
+    accessSubject: {
+      type: 'string',
+      required: true,
+      description: 'User or data group id',
+    },
+    model: {
+      type: 'string',
+      required: true,
+    },
+    dataItem: {
+      type: 'string',
+      required: true,
+    },
+  },
 
   exits: {},
 
-  fn: async function (inputs) {
+  fn: async function ({ model, dataItem, accessSubject }) {
     // All done.
     return;
   },
